@@ -1,3 +1,9 @@
+2005-06-23  Erik Hjortsberg   <erik@katastrof.nu>
+
+
+	* src/components/ogre/widgets/InspectWidget.*
+		* oops, don't try to get the view until it's created
+
 2005-06-23  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* src/components/ogre/EmberEntityUserObject.*, AvatarCamera.cpp
